--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <<link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <title>Broadway Design</title>
   </head>
   <body>
+    <div class="Heading">
     <h1>Broadway Design</h1>
-    <<div class="Navigator">
-      <p><a href="#">Home</a></p>
-      <p><a href="#process">Process</a></p>
-      <p><a href="#work">Work</a></p>
-      <p><a href="#team">Team</a></p>
-      <p><a href="#contact">Contact</a></p>
+      <div class="Nav">
+        <p><a class="Navigator" href="#">Home</a></p>
+        <p><a class="Navigator" href="#process">Process</a></p>
+        <p><a class="Navigator" href="#work">Work</a></p>
+        <p><a class="Navigator" href="#team">Team</a></p>
+        <p><a class="Navigator" href="#contact">Contact</a></p>
+      </div>
     </div>
 
     <h2 id="process">Our Process</h2>
@@ -29,8 +31,11 @@
     <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
 
-    <h2>Designed in New York</h2>
-    <h3 id="work" -->>Portfolio</h3>
+    <div class="NewYork">
+      <h2 id="NewYork">Designed in New York</h2>
+    </div>
+
+    <h3 id="work">Portfolio</h3>
       <p>Coming Soon</p>
 
     <h3 id="team">Team</h3>
@@ -40,13 +45,13 @@
       <p>Phone: (555)-555-5555</p>
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
-    <<div class="footer">
+    <div class="footer">
       <p>© Broadway 2017</p>
-      <a href="Navigator" href="#">Home</a>
-      <a href="Navigator" href="#about">About</a>
-      <a href="Navigator" href="#work">Work</a>
-      <a href="Navigator" href="#team">Team</a>
-      <a href="Navigator" href="#contact">Contact</a>
+      <a class="Navigator" href="#">Home</a>
+      <a class="Navigator" href="#about">About</a>
+      <a class="Navigator" href="#work">Work</a>
+      <a class="Navigator" href="#team">Team</a>
+      <a class="Navigator" href="#contact">Contact</a>
     </div>
 
 
