Updated footer. Final commit to meet requirements

--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     <div class="footer">
-      <p>© Broadway 2017</p>
-      <a class="Navigator" href="#">Home</a>
-      <a class="Navigator" href="#about">About</a>
-      <a class="Navigator" href="#work">Work</a>
-      <a class="Navigator" href="#team">Team</a>
-      <a class="Navigator" href="#contact">Contact</a>
+      <p>
+      © Broadway 2017
+      <a class="FootNav" href="#">Home</a>
+      <a class="FootNav" href="#about">About</a>
+      <a class="FootNav" href="#work">Work</a>
+      <a class="FootNav" href="#team">Team</a>
+      <a class="FootNav" href="#contact">Contact</a>
+      </p>
     </div>
 
 
